Final copy for 3 July 2022

--- a/newsletter/2022-07-03.md
+++ b/newsletter/2022-07-03.md
@@ -13,7 +13,9 @@ One juicy factoid Yaffe-Bellany dug up:
 
 <em><blockquote>The combined fortunes of the 16 richest crypto billionaires exceeded $135 billion in March, Forbes estimated. As of this week, the total was about $76 billion, but most of the loss was suffered by a single billionaire, Changpeng Zhao, the chief executive of the crypto exchange Binance, whose $65 billion fortune shrank to $17.4 billion.</blockquote></em>
 
-Pure number crunching aside, the Times story is particularly unflattering to the Winklevoss brothers, founders of Gemini Capital. Seems they started a tour of their cover band Mars Junction the same week they announced the crypto portfolio management firm would be laying off 10% of its staff.
+In other words, even seeing one's fortune shrink by tens of billions is no doubt painful, it's also true that CZ still has tens of billions left in his fortune. So he's not going to starve. To varying degrees, other early crypto "whales" are in a similar position, but that's not so much the case for average Joe or Jane.
+
+The Times story also pays particular attention to the Winklevoss brothers, billionaire founders of Gemini Capital. Seems they started a tour of their cover band Mars Junction the same week they announced the crypto portfolio management firm would be laying off 10% of its staff.
 
 Not a good look, bros.
 
@@ -26,7 +28,7 @@ The week's other notable headlines:
 - **Bitcoin suffered its worst quarterly decline in 11 years,** down 56% in the period through June 30, according to [The Block](https://www.theblock.co/post/155035/bitcoin-registers-its-worst-quarter-in-11-years-amid-crypto-market-tumult).
 
 - **Three Arrows Capital,** a crypto hedge fund with an estimated $10 billion under management, [filed for bankruptcy](https://www.msn.com/en-us/money/companies/crypto-hedge-fund-three-arrows-files-for-us-bankruptcy/ar-AAZ78EW). There may yet be more such meltdowns to come as high-profile players reduce their leveraged bets. But the trend will eventually fizzle out, [according to Business Insider's Matthew Fox](https://markets.businessinsider.com/news/currencies/crypto-market-deleveraging-near-end-three-arrows-capital-bitcoin-jpmorgan-2022-6?op=1). 
-- 
+
 - **Fresh headaches for Coinbase.** Goldman Sachs analyst [cut their rating](https://www.coindesk.com/business/2022/06/27/goldman-cuts-coinbase-to-sell-due-to-fall-in-crypto-prices-and-industry-activity-shares-drop/) of the trading platform's shares to "sell." Separately, the Intercept [reported](https://theintercept.com/2022/06/29/crypto-coinbase-tracer-ice/) that Coinbase has a contract to provide geolocation data to Immigration and Customs Enforcement. The previously undisclosed deal was unearthed through a public records request by the watchdog group Tech Inquiry.
 
 - **OpenSea suffered a data breach.** The leading platform for trading non-fungible tokens [announced](https://opensea.io/blog/safety-security/important-update-on-email-vendor-security-incident/) that an unspecified number of customer email addresses had leaked to a third party due to mishandling by the platform's email vendor.
