Final copy for 10 July 2022

--- a/newsletter/2022-07-10.md
+++ b/newsletter/2022-07-10.md
@@ -1,9 +1,9 @@
 # Mounting casualties
 ## #Web3 Weekly: July 3-9, 2022
 
-**Bear markets throughout history** have always rearranged the pecking order of investors and industries. Invariably, some don't make it, while others seize an opportunity to buy assets at a discount that turn into fortunes later. And when the dust settles, the winners and losers may not be who you expect.
+**Bear markets throughout history** have always rearranged the pecking order among investors and industries. Invariably, some participants don't make it, while others seize an opportunity to buy cheap assets that turn into fortunes later. And when the dust settles, the winners and losers may not be who you expect.
 
-The week's big tech stories suggest such a winnowing is playing out right now in crypto and beyond:
+The week's tech headlines suggest such a winnowing is now underway in crypto and beyond:
 
 - **Merger updates:** FTX [agreed to buy BlockFi](https://finance.yahoo.com/news/ftx-agrees-deal-blockfi-option-075136401.html) for up to $240 million, pending shareholder approval. Nexo is [in talks](https://www.cnbc.com/2022/07/05/crypto-lender-nexo-offers-to-buy-embattled-rival-vauld.html) to acquire Vauld as part of a restructuring. Meanwhile, Elon Musk wants to [pull out](https://www.coindesk.com/business/2022/07/08/musk-scraps-42b-deal-to-buy-twitter-prompting-board-to-threaten-suit/) of his offer to buy Twitter for $42 billion, originally proposed in April.
 
@@ -14,7 +14,6 @@ The week's big tech stories suggest such a winnowing is playing out right now in
 - **Brokerage Voyager Digital** [filed for Chapter 11 protection](https://www.cnbc.com/2022/07/06/crypto-firm-voyager-digital-files-for-chapter-11-bankruptcy-protection.html) due to heavy exposure to the failed Three Arrows Capital.
 
 - **The Block reports** that the recent security breach of gaming platform Axie Infinity was spurred by a senior engineer's response to a job application at a fictitious company set up by hackers. [Ouch](https://www.theblock.co/post/156038/how-a-fake-job-offer-took-down-the-worlds-most-popular-crypto-game).
-
 
 - **OpeanSea co-founder Alex Atallah** said he will [step down](https://mirror.xyz/alexatallah.eth/-8HvcUeO6wkrzV5xLR-Uv_OljE_Xci1yI6jUBGYJvmU) from an active role in the popular platform for non-fungible tokens as of July 30. He will remain on the company's board, however.
 
