Fleshing out lead item for 17 July

--- a/newsletter/2022-07-17.md
+++ b/newsletter/2022-07-17.md
@@ -1,12 +1,15 @@
-# Would-be book banners are getting more creative
+# American book banners turn to online stalking
 ## #Web3 Weekly: July 10-16, 2022
 
 ![A child reading](https://images.unsplash.com/photo-1491841550275-ad7854e35ca6)
 
 *Photo by Aaron Burden via Unsplash*
 
-The MIT Technology Review reports that book banners are ramping up their attacks on social media against educators. <!-- https://www.technologyreview.com/2022/07/15/1055959/book-bans-social-media-harassment/  -->
+**The dubious honor for Most Disturbing Tech Story** that I read this week goes to [this one](https://www.technologyreview.com/2022/07/15/1055959/book-bans-social-media-harassment/) from MIT Technology Review. The magazine reports that right-wingers who want to ban certain books from U.S. schools -- often ones that include LGBTQ characters or themes -- have taken to coordinated "monitoring" of individual educators on social media.
 
+Unfortunately, this has sometimes led to threats of violence both online and off. For instance, a teachers' union official in Corpus Christi, Texas, told MIT Technology Review someone fired a gun at her house in the middle of the night after she distributed books at a local pride event.
+
+This [story](https://www.technologyreview.com/2022/07/15/1055959/book-bans-social-media-harassment/) is definitely worth a read in full. Honestly, I don't necessarily see any easy answers to the problems it presents. But if you care about democracy, and the internet's role in fostering rather than hampering it, these issues are worth taking time to think through.
 
 The week's other notable headlines:
 
