Final copy for 17 July 2022

--- a/newsletter/2022-07-17.md
+++ b/newsletter/2022-07-17.md
@@ -5,11 +5,11 @@
 
 *Photo by Aaron Burden via Unsplash*
 
-**The dubious honor for Most Disturbing Tech Story** that I read this week goes to [this one](https://www.technologyreview.com/2022/07/15/1055959/book-bans-social-media-harassment/) from MIT Technology Review. The magazine reports that right-wingers who want to ban certain books from U.S. schools -- often ones that include LGBTQ characters or themes -- have taken to coordinated "monitoring" of individual educators on social media.
+**MIT Technology Review ran a deeply disturbing story on Friday about free expression.** The magazine [reports](https://www.technologyreview.com/2022/07/15/1055959/book-bans-social-media-harassment/) that right-wingers who want to ban certain books from U.S. schools -- often ones that include LGBTQ characters or themes -- have taken to coordinated "monitoring" of individual educators on social media.
 
-Unfortunately, this has sometimes led to threats of violence both online and off. For instance, a teachers' union official in Corpus Christi, Texas, told MIT Technology Review someone fired a gun at her house in the middle of the night after she distributed books at a local pride event.
+Unfortunately, this has sometimes translated into harassment both online and off, including even violence in some cases. For instance, a teachers union official in Corpus Christi, Texas, told MIT Technology Review someone fired a gun at her house in the middle of the night after she distributed books at a local pride event.
 
-This [story](https://www.technologyreview.com/2022/07/15/1055959/book-bans-social-media-harassment/) is definitely worth a read in full. Honestly, I don't necessarily see any easy answers to the problems it presents. But if you care about democracy, and the internet's role in fostering rather than hampering it, these issues are worth taking time to think through.
+Honestly, I don't see easy answers to the problems this [article](https://www.technologyreview.com/2022/07/15/1055959/book-bans-social-media-harassment/) highlights. But if you care about democracy, and the internet's role in fostering rather than hampering it, these issues are worth closer attention. We should all be doing whatever possible to combat these sort of shenanigans, I believe.
 
 The week's other notable headlines:
 
@@ -25,11 +25,11 @@ The week's other notable headlines:
 
 - **Business Insider reported that Coinbase** is planning to [suspend](https://www.cryptopolitan.com/experts-trouble-coinbase-shuts-affiliate/) its U.S. affiliate marketing program as a cost-cutting measure. However, the exchange may resume the program next year to offer third-party websites incentives for sending traffic to Coinbase.
 
-- **Disney chose Polygon** among a cohort of six companies in the latest class of its [innovation accelator program](https://thewaltdisneycompany.com/2022-disney-accelerator-participants-announced/). The Polygon network's native token (MATIC) rallied 16% for the week on hopes the entertainment giant will integrate Polygon into its digital products.
+- **Disney chose Polygon** among a cohort of six companies in the latest class of its [innovation accelator program](https://thewaltdisneycompany.com/2022-disney-accelerator-participants-announced/). The Polygon network's native token (MATIC) posted a 7-day gain of 36% as of this morning's trading on hopes Disney will integrate Polygon into its digital products.
 
 - **A new governance token for StarkNet** is [in the works](https://www.theblock.co/post/157323/starkware-confirms-launch-of-starknet-token-with-no-airdrops-until-next-year).
 
-- **This conversation really only comes up in bear markets.** There's a pecking order to getting liquidated in crypto world, with some methods conveying [more social status](https://twitter.com/juthica/status/1546814655825416193) to an investor than others, says Kraken executive Juthica Chou. I'm pretty sure she's at least half-joking.
+- **This conversation really only comes up in bear markets.** There's a pecking order to getting liquidated in crypto world, with some methods conveying [more social status](https://twitter.com/juthica/status/1546814655825416193) to an investor than others, says Kraken executive Juthica Chou.
 
 _**That’s it for now. Thanks for spending some time with #Web3Weekly today! If you would like to receive these updates in your inbox, please subscribe [here](https://w3w.news).**_
 
