minor tweaks to 17 July copy

--- a/newsletter/2022-07-17.md
+++ b/newsletter/2022-07-17.md
@@ -5,7 +5,7 @@
 
 *Photo by Aaron Burden via Unsplash*
 
-**MIT Technology Review ran a deeply disturbing story on Friday about free expression.** The magazine [reports](https://www.technologyreview.com/2022/07/15/1055959/book-bans-social-media-harassment/) that right-wingers who want to ban certain books from U.S. schools -- often ones that include LGBTQ characters or themes -- have taken to coordinated "monitoring" of individual educators on social media.
+**MIT Technology Review ran a deeply disturbing story Friday about a new threat to free expression.** The magazine [reports](https://www.technologyreview.com/2022/07/15/1055959/book-bans-social-media-harassment/) that right-wingers who want to ban certain books from U.S. schools -- often ones that include LGBTQ characters or themes -- have taken to coordinated "monitoring" of individual educators on social media.
 
 Unfortunately, this has sometimes translated into harassment both online and off, including even violence in some cases. For instance, a teachers union official in Corpus Christi, Texas, told MIT Technology Review someone fired a gun at her house in the middle of the night after she distributed books at a local pride event.
 
