Final copy for 7 Aug 2022

--- a/newsletter/2022-08-07.md
+++ b/newsletter/2022-08-07.md
@@ -5,7 +5,10 @@
 
 Bitcoin and Ethereum combined represent about 60% of the $1.1 trillion valuation of the global token market, according to CoinMarketCap.
 
-Hence I think it's worth highlighting here a couple of important stories CoinDesk just ran about the future of each of these giants: Reporter Frederick Munawa has been looking into the rise of [application development on the Lightning Network](https://www.coindesk.com/business/2022/08/07/move-over-ethereum-bitcoins-lightning-network-has-apps-too/), a major platform for enabling faster bitcoin transactions. And Margaux Nijkerk covered [possible changes](https://www.coindesk.com/tech/2022/08/05/what-the-merge-means-for-ethereum-miners/) that might be on the way for Ethereum mining -- a $16 billion industry -- once the network fully adopts a new proof-of-stake protocol this fall.
+Hence I think it's worth highlighting here a couple of important stories CoinDesk just ran about the future of each of these giants: 
+
+- **Frederick Munawa** has been reporting on the rise of [application development on the Lightning Network](https://www.coindesk.com/business/2022/08/07/move-over-ethereum-bitcoins-lightning-network-has-apps-too/), a major platform for enabling faster bitcoin transactions.  
+- **Margaux Nijkerk** covered [possible changes](https://www.coindesk.com/tech/2022/08/05/what-the-merge-means-for-ethereum-miners/) that might be on the way for Ethereum mining -- a $16 billion industry -- once the network fully adopts a new proof-of-stake protocol this fall.
 
 The week's other notable headlines:
 
