Final copy for 14 August 2022

--- a/newsletter/2022-08-14.md
+++ b/newsletter/2022-08-14.md
@@ -1,56 +1,56 @@
-# "Killing" Ethereum
+# Who's really trying to kill Ethereum?
 ## #Web3 Weekly: Aug. 7-13, 2022
 
 ![Man holding physical ETH token](https://images.unsplash.com/photo-1634704760994-96e3ccf2ae85?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80)
 *Photo by Art Rachen via Unsplash*
 
-**In a new interview with The Block,** Blockchain.com co-founder Peter Smith [holds forth](https://www.theblock.co/post/162931/ethereum-killers-are-great-for-investors-but-little-else-blockchain-coms-smith-says) about Layer 1 blockchains, the application-focused networks sometimes billed as "Ethereum killers."
+**In a new interview with The Block,** Blockchain.com co-founder Peter Smith [holds forth](https://www.theblock.co/post/162931/ethereum-killers-are-great-for-investors-but-little-else-blockchain-coms-smith-says) about upstart Layer 1 chains, the application-focused networks sometimes billed as "Ethereum killers."
 
 An excerpt:
 
-<blockquote>*“None of these alternative Layer 1s have come close to beating Ethereum, but they have made investors a lot of money,” [Smith] told The Block in an interview. “If you’re an early investor in a Layer 1 that gets some kind of scale, even if it’s small scale, that’s generated phenomenal returns for you.”*
+<blockquote><em><p>“None of these alternative Layer 1s have come close to beating Ethereum, but they have made investors a lot of money,” [Smith] told The Block in an interview. “If you’re an early investor in a Layer 1 that gets some kind of scale, even if it’s small scale, that’s generated phenomenal returns for you.”</p>
 
-*“That’s where it becomes necessary in this conversation to differentiate between 'is this stuff going to have a huge and meaningful impact on users and daily lives and building the future of finance?' from 'can we make money?' Because the two things are not always one-to-one.”*</blockquote>
+<p>“That’s where it becomes necessary in this conversation to differentiate between 'is this stuff going to have a huge and meaningful impact on users and daily lives and building the future of finance?' from 'can we make money?' Because the two things are not always one-to-one.”</p></em></blockquote>
 
 As someone who has worked on content and marketing for two organizations building Layer 1 platforms, I have to say I agree with Smith. Mostly.
 
-His take is particularly timely amid some signs lately that the crypto bear market is easing. (More on that later.) Before you go betting on the latest can't-miss Layer 1 token, it's probably a good idea to hear him out.
+His take is also particularly timely amid some new signs that the latest crypto bear market is easing. (More on that later.) Before you go betting on the next can't-miss Layer 1 token, it's probably a good idea to hear him out.
 
-My only quibble with Smith's interview might be that I wish either he or The Block had clarified exactly who it is that tends to push the label "Ethereum killer" to the public. In my experience, it's usually crypto press, speculators on social media, or (less often) venture investors, not founders or the engineers actually building new Layer 1s.
+My only quibble might be that I wish either Smith or The Block had clarified exactly *who* it is that tends to push the label "Ethereum killer" to the public. In my experience, it's usually crypto press, speculators on social media, or (less often) venture investors, not founders or the engineers actually building new Layer 1s.
 
-The first crypto startup I ever worked for was Dispatch Labs, which [launched its new Layer 1 mainnet](https://medium.com/dispatchlabs/authentically-bold-f770615f87fb) in late 2018. However, despite hitting that technical milestone, the company didn't survive the "crypto winter" that extended into the following year. Which was really unfortunate.
+The first crypto startup I ever worked for was Dispatch Labs, which [launched its new Layer 1 mainnet](https://medium.com/dispatchlabs/authentically-bold-f770615f87fb) in late 2018. However, despite hitting that technical milestone, the company didn't survive the "crypto winter" that extended into the following year. 
 
-Dispatch had a lot of [good ideas](https://www.youtube.com/watch?v=hclOHNgyxA8) behind it, driven largely by co-founder and Chief Technology Officer Zane Witherspoon's vision to increase transaction speed and decrease transaction costs compared to Ethereum. To this day, these are the goals of many Layer 1 founders.
+Which was really unfortunate. Dispatch had a lot of [good ideas](https://www.youtube.com/watch?v=hclOHNgyxA8) behind it, driven largely by co-founder and Chief Technology Officer Zane Witherspoon's vision to increase transaction speed and decrease costs compared to Ethereum. To this day, these are the goals of many Layer 1 founders.
 
-That said, Zane had gotten started as an Ethereum developer, he revered its founder Vitalik Buterin, and he remained active in the Ethereum community even while he was working on Dispatch.
+That said, I recall Zane had gotten started in blockchain as an Ethereum developer, he revered Ethereum founder Vitalik Buterin, and he remained active in the Ethereum community even while he was working on Dispatch.
 
 The company of course wanted to grow adoption of its token, the Divvy. But its strategy at the time was explicitly to do so *alongside* Ethereum, which already had pretty wide adoption and a market cap that had topped $130 billion at its peak in 2018. (It's now sitting at $242 billion -- a high bar for any new crypto project to clear.)
 
-In that context, yes, Dispatch wanted to improve upon Ethereum technically back in 2018-2019. But I can vouch it never made any chest-thumping promises, publicly or privately, to flat-out "kill" Ethereum.
+In that context, yes, Dispatch wanted to improve upon Ethereum technically back in 2018-2019. But I can vouch it never made any chest-thumping promises, publicly or privately, to flat-out "kill" Ethereum. That would have been madness.
 
-The strategy is similar at the Telos Foundation -- the other Layer 1 org I worked with shortly after Dispatch. They're happily still going strong today, with their TLOS token now up to a $74.5 million market valuation, according to [CoinMarketCap](https://coinmarketcap.com/currencies/telos/). (Disclosure: I still own some of the Telos network's native token, TLOS.)
+The approach is similar at the Telos Foundation -- another Layer 1 org I worked with shortly after Dispatch. They're happily still going strong today, with their TLOS token now up to a $74.5 million market valuation, according to [CoinMarketCap](https://coinmarketcap.com/currencies/telos/). (Disclosure: I still own some TLOS.)
 
-The Telos platform is based on the open [EOSIO](https://en.wikipedia.org/wiki/EOS.IO) protocol. But in November 2021, it bet big on cross-chain compatibility with Ethereum. Telos [launched its own Ethereum Virtual Machine](https://www.globenewswire.com/en/news-release/2021/11/02/2325050/0/en/Telos-Launches-Most-Powerful-EVM-to-Date.html) to conduct such transactions quickly and cheaply.
+The Telos platform is based on the open [EOSIO](https://en.wikipedia.org/wiki/EOS.IO) protocol. But in November 2021, it bet big on cross-chain compatibility with Ethereum by [launching its own Ethereum Virtual Machine](https://www.globenewswire.com/en/news-release/2021/11/02/2325050/0/en/Telos-Launches-Most-Powerful-EVM-to-Date.html) to run Ethereum applications quickly and cheaply.
 
-Telos's founder and chief architect Douglas Horn has often spoken since the EVM launch of [the benefits](https://www.youtube.com/watch?v=uFSg6sMULXQ) and strategic importance of Ethereum compatibility on Telos. While the Telos community was building its EVM, it even [found and helped fix a security bug](https://www.telos.net/news/telos-evm-uncovers-ethereum-vulnerability) in the core Ethereum code that improved the native Ethereum network. And if you look at the Telos Foundation's website, the first thing touted at the [top of the homepage](https://www.telos.net/) is... wait for it... the Telos EVM.
+Telos's founder and chief architect Douglas Horn has often spoken since the EVM launch of [the benefits](https://www.youtube.com/watch?v=uFSg6sMULXQ) and strategic importance of Ethereum compatibility on Telos. While the Telos core developers were building their EVM, they even [found and helped fix a security bug](https://www.telos.net/news/telos-evm-uncovers-ethereum-vulnerability) in the core Ethereum code, thus improving the native Ethereum network. And if you look at the Telos Foundation's website, the first thing touted at the [top of the homepage](https://www.telos.net/) is... wait for it... the Telos EVM.
 
-In other words, Telos is another Layer 1 that's innovating, trying to find a niche, and put forth its unique vision of what distributed computing should be. But, no, it's not trying to kill Ethereum by any stretch.
+In other words, Telos is another Layer 1 that's innovating, attracting new applications, trying to find a niche, and put forth its unique vision of what distributed computing should be. But, no, it's not trying to kill Ethereum by any stretch.
 
-It is possible for all those things to be true at once.
+It is possible for all those things to be true at once. In fact, growing alongside Etehreum is probably the best-case scenario for any alternative Layer 1 at this point, in my opinion. And that should be just fine.
 
 On to the week's other headlines, starting with some pretty positive market developments:
 
 - **Bitcoin posted a third straight weekly gain.** The popular cryptocurrency is now trading above $24,000, helped by improved economic data in the U.S., CoinDesk [reports](https://www.coindesk.com/markets/2022/08/12/market-wrap-bitcoin-price-finishes-higher-for-third-consecutive-week/).   
 
-- **CoinShares says crypto funds** have now seen [six straight weeks of inflows](https://blog.coinshares.com/volume-92-digital-asset-fund-flows-weekly-report-d9364fd76367), comprising $529 million of new investor money in the sector.
+- **CoinShares says crypto funds** have now seen [six straight weeks of inflows](https://blog.coinshares.com/volume-92-digital-asset-fund-flows-weekly-report-d9364fd76367), comprising $529 million of new investor money entering the sector.
 
 - **The Nasdaq Composite officially entered a new bull market.** On Wednesday, the tech-heavy index rose enough to post a 20% gain off its most recent low -- the traditional definition of a bull market on Wall Street. However, there's still plenty of [trepidation](https://www.barrons.com/articles/nasdaq-composite-index-tech-stocks-bull-market-51660162739) afoot that selling pressure could return.
 
-- **More money, more problems for Coinbase.** Asset management giant BlackRock, which recently unveiled a partnership with the crypto exchange, launched a [new bitcoin investment trust](https://www.yahoo.com/entertainment/blackrock-says-offer-clients-spot-165941145.html) for its clients that will likely drive increased trading volume to Coinbase. But on a less auspicious note, Coinbase announced a [$1.1 billion](https://twitter.com/crypto/status/1557105151617503232) loss for the recently ended quarter. The company also facing [new regulatory scrutiny](https://www.bloomberg.com/news/articles/2022-08-10/coinbase-under-sec-scrutiny-over-its-crypto-staking-programs) from the Securities and Exchange Commission regarding its staking programs.  
+- **More money, more problems for Coinbase.** Asset management giant BlackRock, which recently unveiled a partnership with the crypto exchange, launched a [new bitcoin investment trust](https://www.yahoo.com/entertainment/blackrock-says-offer-clients-spot-165941145.html) for its clients that will likely drive increased trading volume to Coinbase. But on a less auspicious note, Coinbase announced a [$1.1 billion](https://www.cnbc.com/2022/08/09/coinbase-coin-earnings-q2-2022.html) loss for the second quarter. The company also facing [new regulatory scrutiny](https://www.bloomberg.com/news/articles/2022-08-10/coinbase-under-sec-scrutiny-over-its-crypto-staking-programs) from the Securities and Exchange Commission regarding its staking programs.  
 
-- **Chainalysis estimates** hackers have [stolen $1.4 billion](https://www.cnbc.com/2022/08/10/hackers-have-stolen-1point4-billion-this-year-using-crypto-bridges.html) this year by exploiting vulnerabilities in cross-chain crypto "bridges." In many cases, investors have little recourse due to the lack of regulatory oversight of crypto. But there have also been instances where funds are either recovered directly from hackers through on-chain forensics or reimbursed by third-party custodian companies that want to preserve users' loyalty. For example, the exchange Binance said it has [recovered $450,000](https://www.coindesk.com/tech/2022/08/12/binance-recovers-450k-stolen-from-curvefinance/) of the $570,000 stolen in a hack of the defi platform Curve on Tuesday.
+- **Chainalysis estimates** hackers have [stolen $1.4 billion](https://www.cnbc.com/2022/08/10/hackers-have-stolen-1point4-billion-this-year-using-crypto-bridges.html) this year by exploiting vulnerabilities in cross-chain crypto "bridges." In many cases, investors have little recourse due to the lack of regulatory oversight of crypto. But there have also been instances where funds are either recovered directly from hackers through on-chain forensics or reimbursed by third-party custodian companies that want to preserve customers' loyalty. For example, the exchange Binance said it has [recovered $450,000](https://www.coindesk.com/tech/2022/08/12/binance-recovers-450k-stolen-from-curvefinance/) of the $570,000 stolen in a hack of the defi platform Curve on Tuesday.
 
-- **The CFTC charged an Ohio man** with running a bitcoin-based Ponzi scheme that [brought in $12 million](https://www.coindesk.com/policy/2022/08/12/cftc-accuses-ohio-man-of-running-12m-bitcoin-ponzi-scheme/).
+- **The Commodity Futures Trading Commission charged an Ohio man** with running a bitcoin-based Ponzi scheme that [brought in $12 million](https://www.coindesk.com/policy/2022/08/12/cftc-accuses-ohio-man-of-running-12m-bitcoin-ponzi-scheme/).
 
 - **OpenSea,** the leading trading platform for non-fungible tokens, took to Twitter to [unveil changes](https://twitter.com/opensea/status/1557487545876762625) to its crime reporting policy.
 
@@ -58,7 +58,7 @@ On to the week's other headlines, starting with some pretty positive market deve
 
 - **The latest release of the open multimedia library FFmpeg** includes [includes native support](https://twitter.com/IPFS/status/1557364875902550016) for the Interplanetary File System, a storage tool used by many decentralized applications.
 
-- **Google is working** to [stop answering](https://www.theguardian.com/technology/2022/aug/11/data-void-google-to-stop-giving-answers-to-silly-questions) our silliest questions. The snippets started off as a whimsical feature, but have taken some dark turns in recent years due to an unholy mix of artificial intelligence, proliferation of misinformation, and the loss of any semblance of common sense among a non-trivial chunk of the public. 
+- **Google is working** to [stop answering](https://www.theguardian.com/technology/2022/aug/11/data-void-google-to-stop-giving-answers-to-silly-questions) our silliest questions. The snippets started off as a whimsical feature, but have taken some dark turns in recent years due to an unholy mix of proliferating misinformation, overly credulous artificial intelligence, and the loss of any semblance of common sense among a non-trivial chunk of human consumers of internet content. 
 
 _**That’s it for now. Thanks for spending some time with #Web3Weekly today! If you would like to receive these updates in your inbox, please subscribe [here](https://w3w.news).**_
 
