--- a/newsletter/2022-08-28.md
+++ b/newsletter/2022-08-28.md
@@ -1,4 +1,4 @@
-# From the NYT, a newbie-friendly look at Ethereum's Merge
+# NYT takes a newbie-friendly look at Ethereum's Merge
 ## #Web3 Weekly: Aug. 21-27, 2022
 
 ![a physical ETH token](https://images.unsplash.com/photo-1622790698141-94e30457ef12?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1172&q=80)
@@ -20,13 +20,13 @@ The week's other notable headlines:
 
 - **The Federal Deposit Insurance Corp. issued cease-and-desist letters to five crypto companies**, including FTX, telling them to [stop making "misleading" claims](https://www.cnbc.com/2022/08/19/crypto-firm-ftx-receives-cease-and-desist-from-fdic-about-insurance.html) about the protection they offer for customers' crypto balances. Unlike conventional bank accounts, crypto accounts are *not* FDIC-insured.
 
-- **Politico reports** that the Department of Justice is [preparing an antitrust case](https://www.politico.com/news/2022/08/26/justice-department-antitrust-apple-00053939) against Apple, with an eye toward filing suit by the end of the year. The U.S. watchdog is focused on possible anticompetitive behavior by Apple toward app developers and rival hardware makers, according to Politico.
+- **Politico reports** that the Department of Justice is preparing an [antitrust case against Apple](https://www.politico.com/news/2022/08/26/justice-department-antitrust-apple-00053939), with an eye toward filing suit by the end of the year. The U.S. watchdog is focused on possible anticompetitive behavior by Apple toward app developers and rival hardware makers, according to Politico.
 
 - **Open source is beautiful.** Uniswap community members voted overwhelmingly to [form a new foundation](https://blockworks.co/uniswap-to-create-foundation/) to support open development of the decentralized finance protocol's software. Separately, my former colleagues at Capsule Social [announced](https://blogchain.app/p/tech-tuesday-blogchain-is-now-open-source/KBHO4UHlM6) they've open sourced several components of the software for their decentralized writing platform Blogchain. Additional releases are planned soon covering backend functionality. Congrats!
 
-- **An important domain for the Ethereum Name Service** is now in limbo because the former Ethereum Foundation employee who registered it with GoDaddy is currently in prison, [unable to renew the address](https://www.coindesk.com/tech/2022/08/26/web3-domain-name-service-could-lose-its-web-address-because-programmer-who-can-renew-it-sits-in-jail/). Virgil Griffith, is serving a 63-month prison sentence for helping North Koreans use cryptocurrencies to evade U.S. sanctions.
+- **An important domain for the Ethereum Name Service** is now in limbo because the former Ethereum Foundation employee who registered it with GoDaddy is in prison, [unable to renew the address](https://www.coindesk.com/tech/2022/08/26/web3-domain-name-service-could-lose-its-web-address-because-programmer-who-can-renew-it-sits-in-jail/). Virgil Griffith, is serving a 63-month sentence for helping North Koreans use cryptocurrencies to evade U.S. sanctions.
 
-- **A recent study of Google search data** by CoinGecko found that [Nigeria has the most interest in cryptocurrency](https://www.bloomberg.com/news/articles/2022-08-10/the-most-curious-nation-about-crypto-is-nigeria-study-shows) of any country on Earth. Author Isaiah Jackson hosted a [panel discussion](https://www.youtube.com/watch?v=6CwWQ3aEbxE) for CoinDesk to discuss the country's growing crypto community.
+- **A recent study of Google search data** by CoinGecko found that [Nigeria has the most interest in cryptocurrency](https://www.bloomberg.com/news/articles/2022-08-10/the-most-curious-nation-about-crypto-is-nigeria-study-shows) of any country on Earth. Author Isaiah Jackson hosted a [panel discussion](https://www.youtube.com/watch?v=6CwWQ3aEbxE) for CoinDesk to discuss the African nation's growing crypto community.
 
 - **Nichelle Nichols' ashes are headed to space.** The pioneering Star Trek actress, who played Lieutenant Uhura, died in July at 89. Now her remains are scheduled to travel more than [150 million miles into space](https://www.nytimes.com/2022/08/27/arts/television/nichelle-nichols-ashes-space-rocket.html) on a rocket to be launched later this year by Celestis, a private spaceflight company that works with NASA.
 
