Minor markdown fix

--- a/newsletter/2022-09-04.md
+++ b/newsletter/2022-09-04.md
@@ -30,7 +30,7 @@ The week's other big headlines:
 
 - **The New York Times** reports that Big Tech companies have begun shifting some hardware manufacturing [out of China](https://www.nytimes.com/2022/09/01/business/tech-companies-china.html) due to rising political tensions with the U.S. Other relatively low-cost countries like India are benefiting, according to the Times.
 
-**A sample of people surveyed in 19 developed countries** increasingly consider online misinformation a "major threat" to their national security, according to the [Pew Research Center](https://www.pewresearch.org/global/2022/08/31/climate-change-remains-top-global-threat-across-19-country-survey/?utm_source=AdaptiveMailer&utm_medium=email&utm_campaign=22-08-31%20GLOBAL%20International%20Threats%20and%20Coop%20GEN%20DISTR&org=982&lvl=100&ite=10400&lea=2186992&ctr=0&par=1&trk=a0D3j000011fU79EAE). Climate change was the number-one concern mentioned in the survey, identified as a threat by 75% of respondents. But misinformation was a surprisingly close second at 70%.
+- **A sample of people surveyed in 19 developed countries** increasingly consider online misinformation a "major threat" to their national security, according to the [Pew Research Center](https://www.pewresearch.org/global/2022/08/31/climate-change-remains-top-global-threat-across-19-country-survey/?utm_source=AdaptiveMailer&utm_medium=email&utm_campaign=22-08-31%20GLOBAL%20International%20Threats%20and%20Coop%20GEN%20DISTR&org=982&lvl=100&ite=10400&lea=2186992&ctr=0&par=1&trk=a0D3j000011fU79EAE). Climate change was the number-one concern mentioned in the survey, identified as a threat by 75% of respondents. But misinformation was a surprisingly close second at 70%.
 
 - **The global soccer powerhouse FIFA** is launching a [new NFT platform](https://bitcoinist.com/fifa-new-nft-platform-in-partnership-with-algorand/) in partnership with Algorand.
 
