Final copy for 11 September 2022

--- a/newsletter/2022-09-11.md
+++ b/newsletter/2022-09-11.md
@@ -1,7 +1,7 @@
 # Tuning in to decentralization
 ## #Web3Weekly: Sept. 4-10, 2022
 
-![An old-school TV](https://images.unsplash.com/photo-1509281373149-e957c6296406?ixlib=rb-1.2.1&dpr=2&auto=format&fit=crop&w=120&h=200&q=60)
+![An old-school TV](https://images.unsplash.com/photo-1509281373149-e957c6296406)
 *Photo by Ajeet Mestry via Unsplash*
 
 **For a change,** I want to highlight some excellent podcasts and videos covering our usual tech-y subject matter around here.
