Edits to 18 September copy

--- a/newsletter/2022-09-18.md
+++ b/newsletter/2022-09-18.md
@@ -1,4 +1,4 @@
-# Looking beyond the Merge
+# Digging into the Merge
 ## #Web3Weekly: Sept. 11-17, 2022
 
 ![Physical ETH token](https://images.unsplash.com/photo-1622790698141-94e30457ef12)
@@ -20,13 +20,13 @@ Some highlights:
 
 - **The Verge reports** that the Ethereum network’s electricity use is expected to [plunge 99.988%](https://www.msn.com/en-us/news/technology/ethereum-just-completed-the-merge-e2-80-94-here-e2-80-99s-how-much-energy-it-e2-80-99s-saving/ar-AA11RCxx) post-Merge. Digiconomist is making a similar projection, including [this eye-popping chart](https://digiconomist.net/ethereum-energy-consumption). New York Times tech columnist Kevin Roose [mused](https://www.nytimes.com/2022/09/15/technology/merge-ethereum-crypto.html) that Ethereum's environmental improvement could bolster the general public's perception of the crypto industry as a whole -- though it still has other problems, to be sure.
 
-- **ETH miners are scrambling for alternatives.** The new "proof of stake" protocol in Ethereum 2.0 is much less profitable for miners than the old "proof of stake" system's rewards for verifying transactions. Some ETH miners are switching to other coins, Decrypt [reports](https://decrypt.co/109136/how-ethereum-miners-plan-to-pivot-after-the-merge). Meanwhile, *no* proof of work-based coin is profitable at this point for miners in California once power costs are factored in, according to [PC Magazine](https://www.pcmag.com/news/no-one-is-profitable-gpu-mining-faces-dark-days-after-ethereum-merge).
+- **ETH miners are scrambling for alternatives.** The new proof-of-stake protocol in Ethereum 2.0 is much less profitable for miners than the old proof-of-work system's rewards for verifying transactions. Some ETH miners are switching to other coins, Decrypt [reports](https://decrypt.co/109136/how-ethereum-miners-plan-to-pivot-after-the-merge). Meanwhile, *no* proof of work-based coin is profitable at this point for miners in California once power costs are factored in, according to [PC Magazine](https://www.pcmag.com/news/no-one-is-profitable-gpu-mining-faces-dark-days-after-ethereum-merge).
 
-- **ETH's price sagged after the Merge,** leaving the token down 17% for the week through Saturday evening. However, the token is still well off its June lows, up 64% to trade near $1,500 recently, according to CoinMarketCap data. CNBC [reports](https://www.cnbc.com/video/2022/09/15/ether-plunges-merge-hedge-funds-bet-against-bitcoin-competitor-crypto-world.html) that anticipation of the Merge boosted ETH through the summer, but hedge funds have recently been shorting the token now that the upgrade is complete.
+- **ETH's price sagged after the Merge,** leaving the token down 17% for the week through Saturday evening. However, the token is still well off its June lows, up 64% to trade above $1,400 recently, according to data from [CoinMarketCap](https://coinmarketcap.com/currencies/ethereum/). CNBC [reports](https://www.cnbc.com/video/2022/09/15/ether-plunges-merge-hedge-funds-bet-against-bitcoin-competitor-crypto-world.html) that anticipation of the Merge boosted ETH through the summer, but hedge funds have recently been shorting the token now that the upgrade is complete.
 
-- **Users shouln't expect the Merge to improve transaction speeds or lower fees quite yet,** according to [Cointelegraph](https://cointelegraph.com/news/lower-costs-higher-speeds-after-ethereum-s-merge-don-t-count-on-it). Those benefits, which are high on the wishlist of many Ethereum users, may take months longer to materialize, depending on additional iterations planned for the network's software.
+- **Users shouln't expect the Merge to improve transaction speeds or lower fees quite yet,** according to [Cointelegraph](https://cointelegraph.com/news/lower-costs-higher-speeds-after-ethereum-s-merge-don-t-count-on-it). Those benefits, which are high on the wishlists of many Ethereum users, may take months longer to materialize, depending on additional iterations planned for the network's software.
 
-- **The Wall Street Journal reports** that the [Securities and Exchange Commission is weighing](https://www.wsj.com/articles/ethers-new-staking-model-could-draw-sec-attention-11663266224) whether the returns offered by proof-of-stake protocols turn such tokens into securities under U.S. law. If so, that would trigger new regulations.
+- **The Wall Street Journal reports** that the [Securities and Exchange Commission is weighing](https://www.wsj.com/articles/ethers-new-staking-model-could-draw-sec-attention-11663266224) whether the returns offered by proof-of-stake protocols turn such tokens into securities under U.S. law. If so, that would trigger new regulations for ETH and other PoW coins.
 
 - **Issuers of non-fungible tokens sought to commemorate the Merge,** turning both Ethereum's last proof-of-work block and its first proof-of-stake block [into NFTs](https://forkast.news/headlines/ethereums-pow-pos-nfts-minted-eth/). The tokens drew [little interest](https://www.coindesk.com/markets/2022/09/15/high-bid-on-nft-of-ethereums-final-pow-block-is-just-one-third-what-creators-paid-to-mint-it/) from bidders, however.
 
