Fixing broken photo link

--- a/newsletter/2022-09-18.md
+++ b/newsletter/2022-09-18.md
@@ -1,7 +1,7 @@
 # Digging into the Merge
 ## #Web3Weekly: Sept. 11-17, 2022
 
-![Physical ETH token](https://images.unsplash.com/photo-1622790698141-94e30457ef12)
+![Physical ETH token](https://images.unsplash.com/photo-1622790698141-94e30457ef12?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3272&q=80)
 *Photo by Kanchanara via Unsplash*
 
 <!--
