--- a/newsletter/2022-10-16.md
+++ b/newsletter/2022-10-16.md
@@ -5,49 +5,39 @@
 
 *Photo by Robert Zunikoff via Unsplash*
 
-<!--
-
-Boilerplate for syndication on third-party platforms:
-
-*Re-sharing below the latest edition of #Web3Weekly, my regular newsletter about decentralization. This installment covers TKTKTKT to TKTKTKTKT. If you would like to get #Web3Weekly in your inbox every Sunday, please subscribe [here](https://w3w.news).*
-
--->
-
-*Thanks to this week's sponsor TechCrunch for supporting the newsletter's coverage of all things decentralized. As a special offer for #Web3Weekly's email subscribers, TechCrunch is offering a 30% discount on  general admission passes to their upcoming conference titled [Sessions: Crypto 2022](https://techcrunch.com/events/tc-sessions-crypto-2022/?utm_medium=tc&utm_campaign=tccrypto&utm_content=article_13&utm_source=techcrunch&promo=article13&display=).*
+*Thanks to this week's sponsor TechCrunch for supporting the newsletter's coverage of all things decentralized. As a special offer for #Web3Weekly's email subscribers, TechCrunch is offering a 30% discount on  general admission passes to their upcoming conference titled [TC Sessions: Crypto 2022](https://techcrunch.com/events/tc-sessions-crypto-2022/?promo=w3w&display=true).*
 
 *The event takes place Nov. 17 in sunny Miami, with an awesome lineup of speakers who will cover every aspect of blockchain and web3. To redeem the #Web3Weekly discount, just be sure to apply the code "w3w" when you purchase your ticket [here](https://techcrunch.com/events/tc-sessions-crypto-2022/?promo=w3w&display=true).*
 
-**Hard to believe, we're almost a year into the bear market in token prices**, sometimes not-so-lovingly referred to as "Crypto Winter. At this point, it's natural to wonder whether the market has hit bottom or, at the very least, is one near?
+**Hard to believe, we're almost a year into the bear market in token prices**, sometimes not-so-lovingly referred to as "Crypto Winter. At this point, it's understandable to wonder whether the market has hit bottom or, at the very least, is one near?
 
-In that spirit, I've been crunching some numbers worth sharing here. First, let's take a look at the performance of crypto and conventional investments since Nov. 10, when bitcoin hit its all-time record above $68,000.
+In that spirit, I've been crunching some numbers worth sharing. First, let's take a look at the performance of crypto and conventional investments since Nov. 10, when bitcoin hit its all-time record above $68,000.
 
-Essentially, this is how these assets have performed so far through the entirety of Crypto Winter so far: <!-- Update numbers late Friday using spreadsheet at  https://tinyurl.com/3tm5xn88 -->
+This is how these assets have performed so far through the entirety of Crypto Winter as of Friday's market close on Wall Street. I've arranged the list in descending order of positive returns to negative. I've also highlighted the S&P 500 since it's the benchmark among pro money managers:
 
-- US Dollar Index: +19%
-- Crude Oil: +7.5%
-- Gold: -10.2%
-- **S&P 500: -20.4%**
-- Nasdaq Composite: -31.4%
-- Global Crypto Market Cap ($TT): -68%
-- ETH: -71.3%
-- BTC: -71.4%
+- USD Index: +19.45%
+- Crude Oil: +5.18%
+- Gold: -10.68%
+- **S&P 500: -22.89%**
+- Nasdaq Composite: -33.93%
+- Global Crypto Market Cap: -68.00%
+- ETH: -72.01%
+- BTC: -72.11%
 
-Notice, this list is arranged in descending order of positive returns to negative. I've also highlighted the S&P 500 because it's a benchmark among professional money managers investing other people's money.
+No surprise that the U.S. Dollar Index, which measures the greenback's value against a basket of other fiat currencies, is leading the way. It's benefited greatly from the Federal Reserve's interest rate hikes, which effectively reduce the supply of dollars flowing through the global economy.
 
-No surprise the U.S. Dollar Index, which measures the greenback's value against a basket of other fiat currencies, is leading the way. It's benefited greatly from the Federal Reserve's interest rate hikes, which effectively reduce the supply of dollars flowing through the global economy.
+Now let's take a look at the same set of assets' performance in just the second half of 2022, since June 30. Notice how the pecking order of gainers and losers changes:
 
-Now let's take a look at the same set of assets' performance in just the second half of 2022, since June 30. Notice how the pecking order of gainers and losers has changed:
+- ETH: +21.43%
+- USD Index: +8.22%
+- Global Crypto Market Cap: +3.52%
+- BTC: -3.20%
+- **S&P 500: -5.34%**
+- Nasdaq Composite: -6.41%
+- Gold: -8.53%
+- Crude Oil: -19.11%
 
-- ETH: 24.54%
-- USD Index: 7.80%
-- Global Crypto Market Cap ($TT): 3.41%
-- BTC: -0.82%
-- **S&P 500: -2.27%**
-- Nasdaq Composite: -2.86%
-- Gold: -8.05%
-- Crude Oil: -17.31%
-
-All the crypto indicators have switched from lagging to *beating* the S&P, led by ether. It benefited from heavy buying ahead of the recent Merge, as well as its revamped monetary policy which continues to require regular "burning" of tokens from the overall supply.
+All the crypto indicators have switched from lagging to *beating* the S&P, led by ether. That token benefited from heavy buying ahead of the Ethereum network's recent Merge, as well as its revamped monetary policy which continues to require regular ["burning" of tokens](https://www.coindesk.com/markets/2022/10/13/ether-becomes-deflationary-for-first-time-since-the-merge-coinbase/) from the overall supply.
 
 <!-- Sponsor Banner -->
 
@@ -55,73 +45,24 @@ To be sure, the relative strength of crypto in the second half isn't slam-dunk p
 
 On to the week's other notable headlines:
 
-((Pickup bulleted items as usual))
+- **Coinbase and Google Cloud** announced a new [long-term strategic partnership](https://www.prnewswire.com/news-releases/google-cloud-and-coinbase-launch-new-strategic-partnership-to-drive-web3-innovation-301645592.html). The crypto exchange will use Google Cloud to offer new trading and data services, while Google will use Coinbase for crypto payments and custody.
 
-- The amount of computational power dedicaated to bitcoin mining reached an all-time high. <!-- need link | BTC is now less volatile than many fiat currencies. <!-- Bloomberg analysis. Byline may be Hajric? | Pound crisis | NTY story on possible Asia currency devaluations akin to the 1997 crisis in that region when the Thai baht collapsed. -->
+- **Bitcoin set new records** for the amount of [computing power dedicated to securing the network](https://www.bloomberg.com/news/articles/2022-10-10/bitcoin-btc-eth-mining-difficulty-surges-as-ether-miners-redirect-resources) and the system's ["hash rate,"](https://bitcoinist.com/bitcoin-hashrate-breakout-largest-difficulty-why/) or pace of verifying new transactions. However, BTC's token price has remained relatively stable around $19,000 despite the technical milestones. [Miners have been switching](https://www.aol.com/news/bitcoin-mining-difficulty-hits-high-032809610.html) from Ethereum to Bitcoin recently since the former switched to a new proof-of-stake protocol, which is more energy efficient but less profitable for node operators
 
-- ETH became deflationary for the first time since the Merge. <!-- https://www.coindesk.com/markets/2022/10/13/ether-becomes-deflationary-for-first-time-since-the-merge-coinbase/ -->
+- **Tether announced** it has now [shed all its commercial debt holdings](https://tether.to/en/tether-slashes-commercial-paper-to-zero/) in lieu of buying more U.S. Treasury bills to back its popular stablecoin.
 
-- SEC is investigating Bored Ape Yacht Club. <!-- https://slate.com/technology/2022/10/bored-ape-yacht-club-yuga-labs-sec-crypto-nfts-apecoin.html | https://www.coindesk.com/policy/2022/10/11/sec-investigating-bored-ape-creator-yuga-labs-over-unregistered-offerings-report/ | https://www.bloomberg.com/news/articles/2022-10-11/bored-ape-creator-yuga-labs-faces-sec-probe-over-unregistered-offerings -->
+- **Uniswap raised** a new round of venture investment valuing the popular decentralized finance (DeFi) platform at [$1.66 billion](https://www.theblock.co/post/176944/uniswap-labs-valued-at-1-66-billion-after-165-million-series-b?utm_source=rss&utm_medium=rss).
 
-- OpeanSea announced support for Avalanche-based NFTs. <!-- https://twitter.com/opensea/status/1579864775026429953 -->
+- **The popular NFT platform OpeanSea** announced that support for Avalanche-based tokens [is now live](https://twitter.com/opensea/status/1579864021037379585).
 
-- Coinbase partnering with Google on cloud services. <!-- Need link -->
+- **The Securities and Exchange Commission** is [investigating](https://www.coindesk.com/policy/2022/10/11/sec-investigating-bored-ape-creator-yuga-labs-over-unregistered-offerings-report/) whether Yuga Labs' Bored Ape Yacht Club, a popular non-fungible token (NFT) collection, constitutes an unregistered security offering.
 
-- Uniswap is worth nearly $1.7 billion <!-- https://www.theblock.co/post/176944/uniswap-labs-valued-at-1-66-billion-after-165-million-series-b?utm_source=rss&utm_medium=rss-->
+- **Congrats to #Web3Weekly reader Lyric,** who just launched Murmurs, a web3 social app with Twitter-like short messages. You can [try it here](https://murmurs.io/) using either a MetaMask, Fennec, or Mixin wallet.
 
-- Tether has shed all its commercial paper holdings. <!-- https://www.coindesk.com/business/2022/10/13/stablecoin-issuer-tether-cuts-commercial-paper-holdings-to-zero/ | https://www.theblock.co/post/177080/tether-to-replace-commercial-paper-with-u-s-treasuries-reserves?utm_source=rss&utm_medium=rss -->
-
-- Murmurs launch. <!-- New web3 social app. See emails. -->
-
-- Gen Z says the thumbs up emoji makes you look old. I feel personally attacked here. <!-- https://www.dailymail.co.uk/femail/real-life/article-11301843/The-worst-emojis-use-2022-Passive-aggressive-thumbs-used-old-people.html -->
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- - Devcon recap item: <!-- Official site: https://devcon.org/default/ \ New privacy alliance: https://www.theblock.co/post/176823/web3-companies-launch-privacy-focused-alliance-at-devcon?utm_source=rss&utm_medium=rss -->
-
-
-<!-- - Coin Center is suing the federal government over its Tornado Cash crackdown. <!-- https://www.coincenter.org/app/uploads/2022/10/1-Complaint-Coin-Center-10-12-22.pdf
-
-- Chelsea Manning excerpt in NYT. <!-- https://www.nytimes.com/2022/10/08/opinion/chelsea-manning.html
-
-- BNY Mellon is launching a new digital currency platform for its clients. <!-- need link
-
-- Europe is "miles ahead" of the U.S. on passing crypto regulations, says Sheila Warren. "The U.S. does not seem to be supporting innovation like other countries are." <!-- https://youtu.be/O3NPhVt0BXA?t=702
-
-- Friedman factoid on US chips importation. <!-- https://www.nytimes.com/2022/10/12/opinion/china-semiconductors-exports.html
-
-- Hoffman and PayPal are in pissing match over midterm elections. <!-- https://www.cnbc.com/2022/09/30/silicon-valley-billionaires-duel-over-trump-midterm-elections.html -->
-
-
-<!-- - NYU prof says there are serious flaws in Wall Street's sudden love for ESG. <!-- https://www.nytimes.com/2022/09/29/opinion/esg-investing-responsibility.html
-
-- New web3 awards by Decrypt. <!-- https://decrypt.co/110671/web3-gets-its-signature-awards-ceremony-decrypt-studios-launches-the-crypties | Check if there's a more updated link available.
-
-- Onion files free speech brief in court case. <!-- https://www.nytimes.com/2022/10/04/us/the-onion-supreme-court.html
-
-- Portugal's bitcoin beach: https://www.nytimes.com/2022/09/28/technology/crypto-portugal-bitcoin-beach.html
-
-- Adobe/Figma raises antitrust concerns. <!-- Need link
-
-- Bloomberg story on "zombie" coins. <!-- https://www.bloomberg.com/professional/blog/crypto-slump-leaves-12100-coins-trapped-in-zombie-trading-limbo/
-
-- Congressional insider trading. <!-- https://twitter.com/Awawat_Trades/status/1577280130900062208/photo/1
-
-- NYT's Manjoo on AI not replacing humans as expected. <!-- https://www.nytimes.com/2022/10/07/opinion/machines-ai-employment.html
-
-- U.S. cities are hiring chief heat officers to cope with climate change. <!-- https://www.fastcompany.com/90793483/meet-the-7-chief-heat-officers-who-are-making-their-cities-more-resilient?partner=rss&utm_source=twitter.com&utm_medium=social&utm_campaign=rss+fastcompany&utm_content=rss -->
+- **Using the thumbs-up emoji** may make you look old and fusty to Gen Z correspondents, according to the [Daily Mail](https://www.dailymail.co.uk/femail/real-life/article-11301843/The-worst-emojis-use-2022-Passive-aggressive-thumbs-used-old-people.html). Harrumph!!!
 
 _**That’s it for now. Thanks for spending some time with the newsletter today! If you would like to receive updates like this in your inbox every Sunday, please join our email list [here](https://w3w.news).**_ <!-- Be sure to delete that last line for copy going out to existing email subscribers, of course. -->
 
 _**As ever, a brief disclaimer: This content is intended for journalistic purposes only, not as investment advice. For the latter, please [DYOR](https://www.google.com/search?q=DYOR&sxsrf=ALiCzsbQdCxZ0zVRVuYN5L2c-89lO7I5cw%3A1663013827193&source=hp&ei=w5MfY5f5BrylptQPrba9uAo&iflsig=AJiK0e8AAAAAYx-h08-1Cfk2JUZBncAoNuCZfyyt_eDY&ved=0ahUKEwjX5q-jiZD6AhW8kokEHS1bD6cQ4dUDCAk&uact=5&oq=DYOR&gs_lcp=Cgdnd3Mtd2l6EAMyCAgAEIAEELEDMgsIABCABBCxAxCLAzIICAAQgAQQiwMyCAgAEIAEEIsDMggIABCABBCLAzIICAAQgAQQiwMyCggAEIAEEAoQiwMyBQgAEIAEMgUIABCABDIFCAAQgAQ6BAgjECc6CAguELEDEIMBOhEILhCABBCxAxCDARDHARDRAzoLCAAQgAQQsQMQgwE6CAgAELEDEIMBOgsILhCABBCxAxCDAToECAAQA1AAWLEEYJkGaABwAHgBgAHaAYgB2wOSAQUyLjEuMZgBAKABAbgBAQ&sclient=gws-wiz) and consult appropriate financial pros to make the most suitable choices for your individual needs.**_
 
-_**Best wishes for a healthy and productive week ahead.**_  
+_**Best wishes for a healthy and productive week ahead.**_ 
