--- a/newsletter/2022-10-23.md
+++ b/newsletter/2022-10-23.md
@@ -1,48 +1,38 @@
 # #Web3Weekly: Oct. 16-22, 2022
 
-*Thanks to this week's sponsor TechCrunch for supporting the newsletter's coverage of all things decentralized. As a special offer for #Web3Weekly's email subscribers, TechCrunch is offering a 30% discount on  general admission passes to their upcoming conference titled [TC Sessions: Crypto 2022](https://techcrunch.com/events/tc-sessions-crypto-2022/?promo=w3w&display=true).*
+*Thanks to this week's sponsor TechCrunch for supporting the newsletter's coverage of all things decentralized. As a special offer for #Web3Weekly's email subscribers, TechCrunch is offering a 30% discount on  general admission passes to their upcoming conference titled [TC Sessions: Crypto](https://techcrunch.com/events/tc-sessions-crypto-2022/?promo=w3w&display=true).*
 
 *The event takes place Nov. 17 in sunny Miami, with an awesome lineup of speakers who will cover every aspect of blockchain and web3. To redeem the #Web3Weekly discount, just be sure to apply the code "w3w" when you purchase your ticket [here](https://techcrunch.com/events/tc-sessions-crypto-2022/?promo=w3w&display=true).*
 
-On to the latest headlines:
+**On to the latest headlines about decentralization:**
 
-- PitchBook says crypto VC funding fell to $5B in 3Q. <!-- Need link. Bloomberg's Hannah Miller did a story, for sure... -->
+- **Venture giant Andreesen Horowitz participated** in just [seven funding rounds](https://fortune.com/2022/10/21/a16z-crypto-venture-funding-drop-chart/) with crypto startups in the third quarter, down from their peak of 26 deals in last year's fourth period. The slowdown is symptomatic of a broader slowdown in crypto startup investment by venture capital firms. Crypto VC activity [fell 50% industrywide](https://fortune.com/crypto/2022/10/05/crypto-vc-funding-down-50-from-last-quarter/) in the third quarter compared to the second quarter, according to Fortune magazine.
 
-- **A majority of blocks on the Ethereum chain is now validated through nodes that comply with U.S. sanctions.** According to data from the mining site [MEVWatch](https://www.mevwatch.info/), 56% of daily Ethereum transactions as of Friday morning were handled through relays that enforce rules set by the Treasury Department's Office of Foreign Asset Control, which enforces sanctions. Such compliance is controversial among many blockchain purists, including the MEVWatch team, as they consider it government censorship of the Ethereum chain.
+- **The Bitcoin network** took over an hour to [verify one new block](https://www.coindesk.com/business/2022/10/17/bitcoin-fails-to-produce-1-block-for-over-an-hour/) of transactions last Monday. (For all the non-technical folks reading this, let it suffice that's not good. At all.)
 
-- MetaMask partnered with Sardine to ease transfers of crypto to fiat. <!-- https://decrypt.co/112014/ethereum-wallet-metamask-instant-bank-crypto-ach -->
+- **Trading activity in non-fungible tokens plunged** to $1.68 billion in the third quarter, down 77% compared to the second period, according to [new research](https://nonfungible.com/news/corporate/nft-market-report-q3-2022) by the data site NonFungible.
 
-- Magic Eden is cutting into OpenSea's market share. Context is an overall decline in NFT trading. "The mania is fading," Bloomberg says. <!-- Need links. Bloomberg may have coverage, perhaps link to crypto show. Check 11:40 mark or look at nonfungible.com to match. | 3q market analysis: https://nonfungible.com/news/corporate/nft-market-report-q3-2022 -->
+- **The Tether stablecoin** is coming to [24,000 ATMs in Brazil](https://decrypt.co/112544/tether-usdt-will-be-available-from-24000-atms-across-brazil) next month through a partnership with SmartPay.
 
-- Mastercard launched crypto trading for banks. <!-- https://unchainedpodcast.com/mastercard-launches-crypto-trading-for-banks/ -->
+- **Other links between cryto and traditional banks are growing as well.**  MetaMask [partnered with Sardine](https://decrypt.co/112014/ethereum-wallet-metamask-instant-bank-crypto-ach) to ease transfers of crypto to fiat money. Meanwhile, both [Mastercard](https://www.mastercard.com/news/press/2022/october/mastercard-to-bring-crypto-trading-capabilities-to-banks/) and [Fidelity](https://twitter.com/brucefenton/status/1582806632425062401) announced new services for institutional crypto traders.
+
+- **Bankrupt crypto lender Voyager Digital** received initial court approval for a proposal to sell its remaining assets to the exchange FTX [for $1.4 billion](https://www.reuters.com/legal/litigation/crypto-lender-voyager-sends-142-bln-ftx-sale-creditor-vote-2022-10-19/). Voyagher' screditors must now vote on the plan by Nov. 29. If it passes, the creditors would recoup 72% of their losses, according to [court filings](https://cases.stretto.com/public/x193/11753/PLEADINGS/1175310192280000000017.pdf).
 
 - **Ex-Meta employees** announced the [launch](https://unchainedpodcast.com/aptos-mainnet-goes-live-but-the-crypto-community-is-skeptical/) a new application-focused blockchain called Aptos. The project has [raised more than $350 million](https://www.coindesk.com/business/2022/07/25/aptos-labs-raises-150m-to-revive-diem-in-ftx-ventures-led-funding-round/) from venture investors.
 
-- **New woes among web2 social networks:** Forbes discovered info that TikTok wanted to spy on specific Americans. <!-- need link -->  Mozilla Foundation published an independent study of the YouTube recommendation algorithm. <!-- https://foundation.mozilla.org/en/youtube/user-controls/?utm_source=email&utm_campaign=youtuberr2022&utm_medium=email&utm_content=kicker_email -->  And the Washington Post reports that Twitter may cut 75% of its workforce <!-- WaPo scoop-->
+- **New woes among web2 social networks:** Forbes [reports](https://www.forbes.com/sites/emilybaker-white/2022/10/20/tiktok-bytedance-surveillance-american-user-data/?sh=48fab5f66c2d) that TikTok's China-based parent ByteDance had plans to track the location of specific users in America. The Mozilla Foundation published [an independent study](https://foundation.mozilla.org/en/youtube/user-controls/?utm_source=email&utm_campaign=youtuberr2022&utm_medium=email&utm_content=kicker_email) of users' ability to give feedback that affects which videos YouTube's algorithm recommends to them. The system does not effectively prevent "unwanted" recommendations, including videos with spam and misinformation, Mozilla says. Separately, the Washington Post reports that Twitter may [cut its workforce](https://www.washingtonpost.com/technology/2022/10/20/musk-twitter-acquisition-staff-cuts/) significantly in the months ahead regardless of whether its sale to Elon Musk goes through. The reductions could seriously hinder the company's efforts to police hate speech and protect user privacy, according to the Post.
 
-- **Where in the world is Do Kwon?** <!-- Passed through Dubai. Need link... | Says in an interview with Laura Shin that there was "a massive market failure," but not a scam. https://twitter.com/laurashin/status/1582364625772969986 | Interpol looking in the metaverse. https://cointelegraph.com/news/put-your-hands-up-interpol-storms-into-the-metaverse-->
-
-- **Regulatory update:** Societe Generale got approval from French regulators to offer digital asset services to clients. <!-- https://www.theblock.co/post/177478/france-approves-its-third-biggest-bank-to-operate-digital-asset-services --> - Texas securities regulators are investigating FTX yield products. <!-- https://unchainedpodcast.com/ftx-us-and-sam-bankman-fried-are-under-investigation-by-texas-regulator/ --> | Three Arrows is being investigated by SEC and CFTC. <!-- Need link -->
+- **Where in the world is Do Kwon?** South Korean authorities confirmed to Bloomberg News they believe the fugitive Terraform Labs co-founder recently [passed through Dubai](https://www.coindesk.com/business/2022/10/21/s-korean-prosecutors-say-reports-of-do-kwons-stopover-in-dubai-not-false-report/), but they're not sure where he was ultimately headed. Meanwhile, he seems to have podcaster Laura Shin [on speed dial](https://www.youtube.com/watch?v=RgYSJVC7Ps8), and Interpol is looking for him [in the metaverse](https://cointelegraph.com/news/put-your-hands-up-interpol-storms-into-the-metaverse). Hmmm...
 
 - **A hacker** revealed his identity and [returned $67 million](https://unchainedpodcast.com/mango-markets-exploiter-returns-67m-after-revealing-his-identity/) obtained in a recent breach of Mango Markets.
 
-- ICYMI: Chelsea Manning excerpt in NYT. <!-- https://www.nytimes.com/2022/10/08/opinion/chelsea-manning.html -->
+- **The collaborative journalism project Future Tense** is tracking proposals to [reform Section 230](https://slate.com/technology/2022/10/section-230-legislative-reform-tracker-introduction.html). The 1990s-era U.S. law covers (or doesn't at this point) many issues around online privacy and liability.
 
-- **Behold Pan Solo!** A California baker has made a bread sculpture of Han Solo frozen in carbonite. <!-- https://www.nytimes.com/2022/10/15/us/han-solo-bakery-sculpture.html -->
+- **A Norwegian court** ruled [against Craig Wright](https://www.coindesk.com/policy/2022/10/20/hodlonaut-wins-norwegian-lawsuit-against-self-styled-satoshi-craig-wright/), who claims he is Satoshi Nakamoto, in his dispute with a bitcoiner who has mocked that claim on Twitter.
 
-<!--
+- **The inaugural American Metaverse Summit & Awards** is now set for [March 2023 in Miami](https://www.americanmetaverseawards.com/). Nominations for the awards portion of the event are welcome through Nov. 15 [here](https://cts.businesswire.com/ct/CT?id=smartlink&url=https%3A%2F%2Fwww.americanmetaverseawards.com%2Fnominations.html&esheet=52930785&newsitemid=20220929005736&lan=en-US&anchor=here&index=2&md5=a282af612c08a143d52a55305616af90). (Thanks to reader Lisa Lopez for alerting me to this one.)
 
-Other candidates...
-
-- New Dimon remarks at IIF conference. Says blockchain may disintermediate parts of the banking system.  <!-- need link
-
-- Shin: Leading crypto market maker Wintermute has repaid a $96 million loan on DeFi protocol TrueFi. Wintermute’s debt repayment comes one day before the deadline and only three week after it was hacked for $160 million. <!-- https://unchainedpodcast.com/wintermute-repays-96m-loan-on-truefi-one-day-before-deadline/
-
-- Coinbase CEO and founder Brian Armstrong is planning to sell some of his shares to fund scientific research. <!-- https://www.theblock.co/post/177435/coinbase-ceo-plans-to-sell-part-of-his-stake-to-fund-science-research
-
-- Hoffman and Thiel are in pissing match over midterm elections. <!-- Need recent link to freshen this story up, but it is a good one to include. Ggood place to start/reference is CNBC story from a few weeks back at https://www.cnbc.com/2022/09/30/silicon-valley-billionaires-duel-over-trump-midterm-elections.html
-
--->
+- **Behold Pan Solo!** The New York Times reports that a baker in Benicia, California, has made a life-size [bread sculpture of Han Solo](https://www.nytimes.com/2022/10/15/us/han-solo-bakery-sculpture.html) imprisoned in carbonite. The bakery calls this masterpiece "Pan Solo," in the tradition of previous works like the "Pain-dou-lorian," "Baby Dough-Da," and "Dough-ki," in honor of the Marvel character Alligator Loki.
 
 _**That’s it for now. Thanks for spending some time with the newsletter today! If you would like to receive updates like this in your inbox every Sunday, please join our email list [here](https://w3w.news).**_ <!-- Be sure to delete that last line for copy going out to existing email subscribers, of course. -->
 
